welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:16: error: not found: value MondeLargeur
        setPos((MondeLargeur-(cpt+1)%getMondeLargeur()),i)
                ^ZigZag:48: error: not found: value rep
  rep= false
  ^ZigZag:49: error: reassignment to val
  if(x=0%2){rep=true}
      ^ZigZag:49: error: not found: value rep
  if(x=0%2){rep=true}
            ^ZigZag:50: error: not found: value rep
  return rep
         ^